--- a/shop_toy/style.css
+++ b/shop_toy/style.css
@@ -1,9 +1,10 @@
-body{
+body {
     background: #f8f8f8;
     width: 95%;
     margin: 0 auto;
 }
-header{
+
+header {
     background: #E6E6FA;
     height: 80px;
     background-image: url('img/rainbow.png');
@@ -13,77 +14,95 @@ header{
     top: 0;
     width: 95%
 }
-.menu{
-  position: absolute;
-  right: 2%;
+
+.menu {
+    position: absolute;
+    right: 2%;
 }
-.menu li:first-child{
-    border-top-left-radius: 15px;    
+
+.menu li:first-child {
+    border-top-left-radius: 15px;
 }
-.menu li:last-child{
+
+.menu li:last-child {
     border-bottom-right-radius: 15px;
 }
-.menu > li a{
+
+a {
+    text-decoration: none;
+}
+
+.menu > li a {
     color: #9932CC;
     font-size: 20px;
-    text-decoration: none;
     display: inline-block;
     width: 100%;
 }
-.menu > li{  
+
+.menu > li {
     padding: 5px;
     border-style: ridge;
     list-style-type: none;
-    font-weight: bold;  
+    font-weight: bold;
     text-align: center;
     display: inline-block;
     background: #D8BFD8;
     float: left;
     width: 180px;
 }
-.menu li a:hover{
+
+.menu li a:hover {
     color: #8B0000;
 }
-.menu li a:active{
+
+.menu li a:active {
     color: #006400;
 }
+
 .menu li ul {
     display: none;
 }
+
 .menu li:hover ul {
     display: block;
     list-style-type: none;
     background: #E6E6FA;
 }
+
 .menu li:hover ul a {
     font-size: 15px;
     font-weight: 400;
 }
-h3{
+
+h3 {
     color: 000;
     font-size: 18px;
     font-weight: 400;
     background: #eaeaea;
 }
-.briefly{
+
+.briefly {
     color: #070707;
     font-size: 14px;
     font-style: italic;
     line-height: 16px;
 }
-.detailed{
+
+.detailed {
     color: #484343;
     font-size: 16px;
     font-weight: 400;
     line-height: 24px;
     text-align: left;
 }
-.characteristic li{
+
+.characteristic li {
     list-style: url('img/clover.jpg');
     font-size: 16px;
     font-family: "Times New Roman";
 }
-form{
+
+form {
     color: #4B0082;
     line-height: 20px;
     border: double #4B0082;
@@ -91,34 +110,44 @@ form{
     border-radius: 15px;
     padding: 10px;
 }
-input{
+
+input {
     background-color: #D8BFD8;
     width: 100px;
     padding: 10px;
     border-radius: 6px;
 }
-input:hover{
+
+input:hover {
     background-color: #E6E6FA;
 }
-input[type="radio"], [type="checkbox"]{
+
+input[type="radio"],
+[type="checkbox"] {
     width: 50px;
 }
-input[type="text"], [type="password"]{
+
+input[type="text"],
+[type="password"] {
     width: 250px;
 }
-input[type="text"]{
+
+input[type="text"] {
     text-transform: capitalize;
 }
-input[type="submit"]{
+
+input[type="submit"] {
     width: 150px;
-    color:#228B22;
+    color: #228B22;
     font-weight: bold;
 }
-input[type="reset"]{
+
+input[type="reset"] {
     color: #8B0000;
     font-style: italic;
 }
-input[type="button"]{
+
+input[type="button"] {
     position: fixed;
     right: 2%;
     top: 15%;
@@ -126,69 +155,92 @@ input[type="button"]{
     font-size: 20px;
     font-weight: 500;
 }
-input[type="button"]:hover{
+
+input[type="button"]:hover {
     color: #8B0000;
 }
-input[type="button"]:active{
+
+input[type="button"]:active {
     color: #006400;
 }
-input[type="button"], [type="reset"], [type="submit"]{
-    background: linear-gradient(#D8BFD8, #BA55D3);    
+
+input[type="button"],
+[type="reset"],
+[type="submit"],
+button {
+    background: linear-gradient(#D8BFD8, #BA55D3);
 }
-img{
+
+img {
     outline-style: double;
     outline-width: 5px;
     outline-color: #4B0082;
 }
-.catalog{
+
+.catalog {
     display: inline-block;
     width: 300px;
     text-align: center;
 }
-.product{
+
+.product {
     margin-right: 20px;
     float: left;
     clear: both;
 }
-img:hover{
+
+img:hover {
     outline: none;
 }
-h1{
+
+h1 {
     color: #9932CC
 }
-.table_of_characteristics{
+
+.table_of_characteristics {
     border: 1px solid #4B0082;
     width: 100%;
     height: 200px;
 }
-.table_of_characteristics td{
-    border: 1px solid #4B0082; 
+
+.table_of_characteristics td {
+    border: 1px solid #4B0082;
     padding-left: 10px;
 }
-.table_of_characteristics tr:first-child td:first-child{
-   width: 15px;
-   background-image: url('img/clover.jpg');
-   background-repeat: repeat-y;
+
+.table_of_characteristics tr:first-child td:first-child {
+    width: 15px;
+    background-image: url('img/clover.jpg');
+    background-repeat: repeat-y;
 }
-.content p:first-letter{
+
+.content p:first-letter {
     color: #800080;
     font-size: 25px;
     font-weight: 400;
 }
-.content{
+
+.content {
     margin-top: 100px;
     margin-bottom: 10%;
 }
 
-footer{
+.basket {
+    border: double #4B0082;
+    text-align: center;
+    border-radius: 10px;
+    background: #E6E6FA;
+}
+
+footer {
     background: #E6E6FA;
     border-top: double #4B0082;
     text-align: right;
-    position:fixed;
+    position: fixed;
     top: 95%;
     width: 95%;
 }
-footer p{
+
+footer p {
     margin-right: 30px;
 }
-
